<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/miqaat" android:title="@string/miqaat_opt_label" android:icon="@android:drawable/ic_menu_month"/>
    <item android:id="@+id/reminders" android:title="@string/reminder_label"/>
    <item android:id="@+id/bearings" android:title="@string/bearing_opt_label" android:icon="@android:drawable/ic_menu_preferences"/>
    <item android:id="@+id/about" android:icon="@android:drawable/ic_menu_info_details" android:title="@string/about_opt_label"/>
    <item android:id="@+id/share" android:icon="@android:drawable/ic_menu_share" android:title="@string/share_opt_label"/>
    <item android:id="@+id/quit" android:title="@string/exit_opt_label" android:icon="@android:drawable/ic_menu_revert"/>
</menu> 
