<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       android:orientation="horizontal">

            <Button
                android:id="@+id/setGregorianButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_gregorian_label"
                android:layout_weight="2"/>
            
            <Button
                android:id="@+id/setMisriButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_misri_label"
                android:layout_weight="2"/>
            
        </LinearLayout>

       <LinearLayout
        android:id="@+id/row2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       android:orientation="horizontal">

            <Button
                android:id="@+id/dayMinusButton"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/DayMinus"
                android:layout_weight="3"/>

            <Button
                android:id="@+id/todayButton"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/Today"
                android:layout_weight="3"/>

            <Button
                android:id="@+id/dayPlusButton"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/DayPlus"
                android:layout_weight="3"/>
       </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sunButton"
            style="@style/notTodayButton"
            android:text="@string/Su"/>

        <Button
            android:id="@+id/monButton"
            style="@style/notTodayButton"
            android:text="@string/Mo"/>

        <Button
            android:id="@+id/tueButton"
            style="@style/notTodayButton"
            android:text="@string/Tu"/>

        <Button
            android:id="@+id/wedButton"
            style="@style/notTodayButton"
            android:text="@string/We"/>

        <Button
            android:id="@+id/thuButton"
            style="@style/notTodayButton"
            android:text="@string/Th"/>

        <Button
            android:id="@+id/friButton"
            style="@style/notTodayButton"
            android:text="@string/Fr"/>

        <Button
            android:id="@+id/satButton"
            style="@style/notTodayButton"
            android:text="@string/Sa"/>
    </LinearLayout>

    <TextView
        android:id="@+id/convertedDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dip"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/dateGregorian"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding=" 5dip"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/eventText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dip"
        android:textColor="@color/monthListNumber"
        android:textSize="14sp"/>

    <TableLayout
        android:id="@+id/arrowsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>

            <ImageView
                android:id="@+id/arrow_icon_north"
                android:layout_width="150dip"
                android:layout_height="150dip"
                android:layout_weight="2"
                android:adjustViewBounds="true"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/arr2"/>

            <ImageView
                android:id="@+id/arrow_icon_mecca"
                android:layout_width="150dip"
                android:layout_height="150dip"
                android:layout_gravity="right"
                android:layout_weight="2"
                android:adjustViewBounds="true"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/arr2"/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/northLabel"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="5dip"
                android:text="@string/north"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/meccaLabel"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dip"
                android:text="@string/mecca"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_weight="2"/>

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TableLayout
            android:id="@+id/arrowsTextLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:id="@+id/bearingMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="5dip"
                    android:text="@string/auto"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/bearing_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:gravity="right"
                    android:padding="1dip"
                    android:text="@string/bearing_number_label"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/bearing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:minWidth="7dip"
                    android:padding="1dip"
                    android:textSize="14sp"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>